--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js"
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js",
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/pragatisisoida/reactPro#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-loader": "^7.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -30,6 +32,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
