--- a/package.json
+++ b/package.json
@@ -1,50 +1,24 @@
 {
-  "name": "react-master",
-  "version": "1.0.0",
-  "description": "A master for all utilities",
-  "main": "index.js",
+  "name": "reactPro",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js",
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pragatisisoida/reactPro.git"
-  },
-  "author": "pragati sisodia",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pragatisisoida/reactPro/issues"
-  },
-  "homepage": "https://github.com/pragatisisoida/reactPro#readme",
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "axios": "^0.18.0",
-    "babel-loader": "^7.1.5",
-    "node-sass": "^4.11.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "react": "16.8.3",
+    "react-native": "0.59.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "css-loader": "^2.1.1",
-    "less-loader": "^4.1.0",
-    "style-loader": "^0.23.1"
+    "@babel/core": "7.4.3",
+    "@babel/runtime": "7.4.3",
+    "babel-jest": "24.7.1",
+    "jest": "24.7.1",
+    "metro-react-native-babel-preset": "0.53.1",
+    "react-test-renderer": "16.8.3"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
